--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
   firebase_remote_config: ^4.3.6
+  google_sign_in: ^6.2.0
 
 dev_dependencies:
   flutter_test:
