--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.15.0
   firebase_remote_config: ^4.3.6
   google_sign_in: ^6.2.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
