--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_remote_config: ^4.3.6
   google_sign_in: ^6.2.0
   google_fonts: ^6.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
