--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_sign_in: ^6.2.0
   google_fonts: ^6.1.0
   intl: ^0.19.0
+  flutter_rating_stars: ^1.0.3+4
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
