--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   intl: ^0.19.0
   flutter_rating_stars: ^1.0.3+4
   cloud_firestore: ^4.13.6
+  transparent_image: ^2.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
