--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/2x/
+    - assets/images/3x/
+    - assets/images/movies_header/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
